# xiaomi_uranus_chatbot

./: .gitignore  .mise.toml  README.md  config.json.example  config.yml.example  pyproject.toml  requirements.txt  run.sh  xfu_bot.py
modules/: custom_recovery.py  extras.py  functions.py  gsmarena.py  mi_vendor_updater.py  misc.py  miui_updates_tracker.py  mwt.py  twrp.py  xiaomi_eu.py  xiaomi_firmware_updater.py  xiaomi_info.py
uranus_bot/: __init__.py  __main__.py  tg_bot.py  xfu_bot.py
uranus_bot/database/: database.py  discord_database.py
uranus_bot/database/models/: chat.py  devices.py  guild.py  i18n.py  subscription.py
uranus_bot/discord_bot/: __init__.py  __main__.py  discord_bot.py
uranus_bot/discord_bot/messages/: firmware.py  info.py  main.py  misc.py  miui_updates.py  orangefox.py  pitchblack.py  specs.py  twrp.py  vendor.py  xiaomi_eu.py  xiaomi_oss.py
uranus_bot/discord_bot/modules/: __init__.py  admin.py  firmware.py  info.py  main.py  misc.py  miui_updates.py  orangefox.py  pitchblack.py  specs.py  subscriptions.py  twrp.py  vendor.py  xiaomi_eu.py  xiaomi_oss.py
uranus_bot/discord_bot/utils/: chat.py
uranus_bot/i18n/: ar.yml  be.yml  bg.yml  cs.yml  de.yml  en.yml  es-ES.yml  es-MX.yml  fr.yml  id.yml  it.yml  locales.yml  localize.py  nl.yml  pl.yml  pt-BR.yml  ru.yml  sq.yml  tr.yml  zh-CN.yml
uranus_bot/messages/: admin.py  error_message.py
uranus_bot/modules/: custom_recovery.py  extras.py  gsmarena.py  inline.py  main.py  mi_vendor_updater.py  misc.py  miui_updates_tracker.py  xiaomi_eu.py  xiaomi_firmware_updater.py  xiaomi_info.py  xiaomi_oss.py
uranus_bot/providers/: provider.py
uranus_bot/providers/devices_info/: info.py
uranus_bot/providers/firmware/: firmware.py
uranus_bot/providers/misc/: __init__.py  arb.py  guides.py  tools.py  unlockbl.py
uranus_bot/providers/miui_updates_tracker/: miui_updates_tracker.py
uranus_bot/providers/specs/: specs.py
uranus_bot/providers/utils/: utils.py
uranus_bot/providers/xiaomi_eu/: xiaomi_eu.py
uranus_bot/providers/xiaomi_oss/: xiaomi_oss.py
uranus_bot/telegram/: tg_bot.py
uranus_bot/telegram/messages/: twrp.py
uranus_bot/telegram/modules/: __init__.py  inline.py  main.py  twrp.py
uranus_bot/telegram_bot/: __init__.py  __main__.py  tg_bot.py
uranus_bot/telegram_bot/messages/: error.py  firmware.py  help.py  info.py  misc.py  miui_updates.py  orangefox.py  pitchblack.py  settings.py  specs.py  twrp.py  vendor.py  welcome.py  xiaomi_eu.py  xiaomi_oss.py
uranus_bot/telegram_bot/modules/: __init__.py  (+17 more)
uranus_bot/utils/: chat.py  loader.py  miui.py  sentry_logging.py
(+6 files in other folders)
