[tool.poetry]
name = "uranus_bot"
version = "2.1.0"
description = "An all-in-one bot that provide useful services for Xiaomi users on Telegram and Discord."
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
Telethon = "1.35.0"
cryptg = "^0.4"
Pillow = "^10.3.0"
PyYAML = "^6.0"
aiohttp = { extras = ["speedups"], version = "^3.9.2" }
sentry-sdk = "2.0.1"
aiocontextvars = "^0.2.2"
"discord.py" = "^2.2.2"
orangefoxapi = { git = "https://gitlab.com/yshalsager/python-api-lib.git", rev = "poetry" }
SQLAlchemy = "^2.0.15"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
