[tool.poetry]
name = "uranus_bot"
version = "2.1.0"
description = "An all-in-one bot that provide useful services for Xiaomi users on Telegram and Discord."
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
Telethon = "1.37.0"
cryptg = "^0.4"
Pillow = "^10.4.0"
PyYAML = "^6.0.2"
aiohttp = { extras = ["speedups"], version = "^3.10.5" }
sentry-sdk = "2.15.0"
aiocontextvars = "^0.2.2"
"discord.py" = "^2.4.0"
orangefoxapi = { git = "https://gitlab.com/OrangeFox/infrastructure/python-api-lib", rev = "8ff7a146" }
SQLAlchemy = "^2.0.32"

[tool.poetry.group.dev.dependencies]
#ruff = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
