[project]
name = "uranus_bot"
version = "2.1.0"
description = "An all-in-one bot that provide useful services for Xiaomi users on Telegram and Discord."
authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "aiohttp[speedups]>=3.10.10",
    "beautifulsoup4>=4.12.3",
    "cryptg>=0.5.0.post0",
    "discord-py>=2.4.0",
    "humanize>=4.11.0",
    "orangefoxapi",
    "pillow>=11.0.0",
    "python-telegram-bot>=21.6",
    "pyyaml>=6.0.2",
    "sentry-sdk>=2.17.0",
    "sqlalchemy>=2.0.36",
    "telethon>=1.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.1",
]

[tool.uv.sources]
orangefoxapi = { git = "https://gitlab.com/OrangeFox/infrastructure/python-api-lib.git", rev = "8ff7a146" }

[tool.ruff]
fix = true
src = ["uranus_bot"]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
